# wagtail-translatableforms

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  entrypoint.sh  pyproject.toml  requirements.txt  test.yml  testmanage.py
tests/: exceptions.py  settings.py  test.py  urls.py
wagtail_translatableforms/: __init__.py  apps.py  blocks.py  models.py  serializers.py  urls.py  utils.py  views.py
wagtail_translatableforms/migrations/: 0001_initial.py
wagtail_translatableforms/templates/customforms/: confirm_delete.html  index.html  index_submissions.html
wagtail_translatableforms/templatetags/: custom_tags.py
